updated readme and added screenshots

--- a/TicTacToe.vcxproj.filters
+++ b/TicTacToe.vcxproj.filters
@@ -38,4 +38,12 @@
   <ItemGroup>
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="images\board5.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="images\board6.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
