--- a/TicTacToe.vcxproj
+++ b/TicTacToe.vcxproj
@@ -164,6 +164,10 @@
     <ClInclude Include="src\GameFunctions.h" />
     <ClInclude Include="src\Utilities.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="images\board5.jpg" />
+    <Image Include="images\board6.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
