restructured into OO

--- a/TicTacToe.vcxproj
+++ b/TicTacToe.vcxproj
@@ -147,9 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\GameFunctions.cpp" />
+    <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Board3.txt" />
@@ -163,8 +162,7 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\GameFunctions.h" />
-    <ClInclude Include="src\Utilities.h" />
+    <ClInclude Include="src\Game.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="images\board3.jpg" />
