--- a/TicTacToe.vcxproj
+++ b/TicTacToe.vcxproj
@@ -151,8 +151,8 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="src\Board3.txt" />
-    <Text Include="src\Board4.txt" />
+    <Text Include="src\board3.txt" />
+    <Text Include="src\board4.txt" />
     <Text Include="src\board6.txt" />
     <Text Include="src\Splash.txt" />
     <Text Include="src\boardbackup.txt" />
@@ -165,7 +165,7 @@
     <ClInclude Include="src\Game.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="images\board3.jpg" />
+    <Image Include="images\Board3.jpg" />
     <Image Include="images\board5.jpg" />
     <Image Include="images\board6.jpg" />
     <Image Include="images\TicTacToe_on_Kali.jpg" />
