--- a/TicTacToe.vcxproj.filters
+++ b/TicTacToe.vcxproj.filters
@@ -39,16 +39,16 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="images\board5.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="images\board6.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="images\TicTacToe_on_Kali.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="images\Board3.jpg">
+    <Image Include="images\BBoard5.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="images\BBoard3.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="images\BBoard6.jpg">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
