added new board and minor updates

--- a/TicTacToe.vcxproj.filters
+++ b/TicTacToe.vcxproj.filters
@@ -29,6 +29,7 @@
     <Text Include="src\Splash.txt" />
     <Text Include="src\board3.txt" />
     <Text Include="src\board4.txt" />
+    <Text Include="src\board2.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
